Apply suggestions from code review
Co-authored-by: James Nord <jtnord@users.noreply.github.com>